# jx3-raid-manager

./: .git-commit-msg.txt  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  JX3RaidManager_2.1.24_x64-setup.exe.sig  README.md  constants.ts  debug_inspect_simple.js  design_system_output.txt  design_system_v2.md  index.css  index.html  index.tsx  latest.json  manifest.json  metadata.json  package-lock.json  package.json  query_db.cjs  query_db.ps1  query_db2.ps1  sw.js  tailwind.config.js  temp2.json  temp_records.json  temp_records_utf8.json  test-agent.txt  tsconfig.json  types.ts  vite-plugin-kungfu-data.ts  vite.config.ts
.claude/: settings.local.json
.omc/: project-memory.json
components/: AccountManager.tsx  AddAccountModal.tsx  AddBaizhanRecordModal.tsx  AddRaidModal.tsx  AddRecordModal.tsx  AddRoleModal.tsx  AddTrialRecordModal.tsx  AutoAnalyzer.tsx  BaizhanManager.tsx  BaizhanRoleRecordsModal.tsx  BossCooldownDisplay.tsx  ConfigManager.tsx  CrystalDetail.tsx  Dashboard.tsx  DateTimePicker.tsx  DebugConsole.tsx  DualRangeSlider.tsx  ErrorBoundary.tsx  ImportRolesModal.tsx  IncomeDetail.tsx  LoadingSpinner.tsx  MigrationStatus.tsx  RaidDetail.tsx  RaidLogger.tsx  RaidManager.tsx  RoleRecordsModal.tsx  SectIcon.tsx  SectSelect.tsx  SetupGuide.tsx  ToastContainer.tsx  TrialBossEquipmentStatsSection.tsx  TrialFlipDetail.tsx  TrialFlipStatsModal.tsx  TrialPlaceManager.tsx  TrialRoleRecordsModal.tsx  UpdateDialog.tsx
contexts/: ActivePollerContext.tsx  AppConfigContext.tsx  ThemeContext.tsx  context.md
data/: baizhanBosses.ts  kungfu_data.json  raidBosses.ts  raidBosses.ts.backup  staticRaids.ts
docs/: RELEASE_GUIDE.md  TEST_CASES.md  release-process.md  user-guide.md  新手指南.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: SimpChinese.nsh  hooks.nsh
src-tauri/src/: app_config.rs  db.rs  equip_sync.rs  game_directory.rs  gkp_parser.rs  jx3_process.rs  kungfu_data.rs  main.rs  runtime_mode.rs  test_wanling.rs  updater.rs
src-tauri/src/analyzer/: mod.rs  parser.rs  scanner.rs
src-tauri/src/db/: migration.rs  static_raids.json  static_seasons.json  static_versions.json  upgrade_tests.rs
src-tauri/src/db/migrations/: mod.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
src-tauri/src/mingyi/: active_detector.rs  mod.rs
(+148 files in other folders)
