[package]
name = "jx3-raid-manager"
version = "1.0.0"
description = "剑网三副本管家"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "window-all", "process-all", "dialog-confirm", "dialog-message", "shell-open", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["std"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
